<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser</groupId>
        <artifactId>dpa-root</artifactId>
        <version>master-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser.tools</groupId>
    <artifactId>dpa-tools-deployment</artifactId>
    <version>master-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <output>target/appassembler/services/META-INF/maven/dependency-tree.txt</output>
    </properties>

    <dependencies>
        <dependency>
            <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser.tools</groupId>
            <artifactId>dpa-tools</artifactId>
            <version>${project.version}</version>
        </dependency>


        <!-- slf4j production backend. -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.0.12</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <!-- get git information from file system -->
            <!--
                 [INFO] [GitCommitIdMojo] git.commit.id.abbrev = f422323
                 [INFO] [GitCommitIdMojo] git.commit.user.email = tra@statsbiblioteket.dk
                 [INFO] [GitCommitIdMojo] git.commit.message.full = DPA-64: Initial dashboard skeleton to show XSD-validation output.
                 [INFO] [GitCommitIdMojo] git.commit.id = f42232310c9625eae13c491a9e44c1accaba4b1b
                 [INFO] [GitCommitIdMojo] git.commit.message.short = DPA-64: Initial dashboard skeleton to show XSD-validation output.
                 [INFO] [GitCommitIdMojo] git.commit.user.name = Thorbjoern Ravn Andersen
                 [INFO] [GitCommitIdMojo] git.build.user.name = Thorbjoern Ravn Andersen
                 [INFO] [GitCommitIdMojo] git.build.user.email = tra@statsbiblioteket.dk
                 [INFO] [GitCommitIdMojo] git.branch = DPA-64
                 [INFO] [GitCommitIdMojo] git.commit.time = 17.02.2017 @ 13:53:31 CET
                 [INFO] [GitCommitIdMojo] git.build.time = 20.02.2017 @ 09:59:00 CET
            -->
            <plugin>
                <!-- https://github.com/ktoso/maven-git-commit-id-plugin#using-the-plugin -->
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <!-- 2.0.4 is the newest that does not require Maven 3.3 -->
                <version>2.0.4</version>
                <executions>
                    <execution>
                        <id>set-properties-in-maven-build-for-expansion-when-creating-shell-scripts</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <configuration>
                        </configuration>
                    </execution>
                    <execution>
                        <id>save-properties-to-tarball</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <configuration>
                            <generateGitPropertiesFile>true</generateGitPropertiesFile>
                            <generateGitPropertiesFilename>target/appassembler/services/META-INF/git.properties</generateGitPropertiesFilename>
                        </configuration>
                    </execution>
                </executions>
            </plugin>


            <!-- http://stackoverflow.com/a/7957042/53897 - create classes/META-INF/dependencies.properties-->
            <plugin>
                <groupId>org.apache.servicemix.tooling</groupId>
                <artifactId>depends-maven-plugin</artifactId>
                <version>1.4.0</version>
                <executions>
                    <execution>
                        <id>generate-depends-file</id>
                        <goals>
                            <goal>generate-depends-file</goal>
                        </goals>
                        <configuration>
                            <outputFile>target/appassembler/services/META-INF/dependencies.properties</outputFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>


            <!-- create the deployment layout

             NOTE:  Consider cd'ing to the location where log files are to be generated.  This
             will make it much easier to have a read-only code deployment.
             -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <!-- FIXME: Upgrade to 2.0.0 -->
                <version>1.10</version>
                <configuration>
                    <!--
                    http://www.mojohaus.org/appassembler/appassembler-maven-plugin/assemble-mojo.html
                    -->
                    <assembleDirectory>${project.build.directory}/appassembler/services</assembleDirectory>
                    <platforms>
                        <platform>unix</platform>
                    </platforms>
                    <binFolder>java-wrappers</binFolder>
                    <configurationDirectory>conf</configurationDirectory>
                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
                    <filterConfigurationDirectory>false</filterConfigurationDirectory>

                    <!-- flat/default/legacy - consider what works best.  -->
                    <repositoryLayout>flat</repositoryLayout>
                    <repositoryName>libs</repositoryName>

                    <!-- for logback.  It also allows for emergency hotpatching by adding classes here -->
                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
                    <projectArtifactFirstInClassPath>true</projectArtifactFirstInClassPath>
                    <preAssembleDirectory>for-deployment</preAssembleDirectory>

                    <!-- JVM configuration flags - gc logging etc

                    https://blog.codecentric.de/en/2014/01/useful-jvm-flags-part-8-gc-logging/

                    FIXME: Consider if we need a full thread dump when task fails: http://stackoverflow.com/a/2788423/53897
                    For OOM VisualVM can extract it from the hprof file.

                    FIXME:  We would like to add ${app.name} to the gc log file, but tra cannot figure out how yet.
                    -->
                    <!--suppress MavenModelInspection -->
                    <extraJvmArguments>
                        $${ENABLE_GC_LOG:+
                        -Ddpa.git.id=${git.branch}_${git.commit.id.abbrev}
                        -verbose:gc
                        -XX:+PrintGCDetails
                        -XX:+PrintGCDateStamps
                        -XX:+PrintGCTimeStamps
                        -Xloggc:gc-$(date '+%Y-%m-%d-%H-%M-%S')-$$$$.log
                        }
                        -XX:+HeapDumpOnOutOfMemoryError
                    </extraJvmArguments>
                </configuration>

                <executions>
                    <execution>
                        <id>assemble</id>
                        <phase>package</phase>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                        <configuration>
                            <programs>
                                <!-- consider getting this automatically - http://stackoverflow.com/q/4107498/53897 -->
                                <program>
                                    <mainClass>
                                        dk.statsbiblioteket.digital_pligtaflevering_aviser.tools.main.CreateDeliveryMain
                                    </mainClass>
                                    <id>dpa-create-delivery</id>
                                </program>
                                <program>
                                    <mainClass>
                                        dk.statsbiblioteket.digital_pligtaflevering_aviser.tools.main.IngesterMain
                                    </mainClass>
                                    <id>dpa-ingester</id>
                                </program>
                                <!--
                                <program>
                                    <mainCldk.statsbiblioteket.digital_pligtaflevering_aviser.tools.vagrant.mainmain.VeraPDFInvokeMain
                                    </mainClass>
                                    <id>dpa-verapdf-apply</id>
                                </program>
                                -->
                                <program>
                                    <mainClass>
                                        dk.statsbiblioteket.digital_pligtaflevering_aviser.tools.main.ValidateXMLMain
                                    </mainClass>
                                    <id>dpa-validate-xml</id>
                                </program>
                                <program>
                                    <mainClass>
                                        dk.statsbiblioteket.digital_pligtaflevering_aviser.tools.main.GenerateStatisticsMain
                                    </mainClass>
                                    <id>dpa-generate-statistics</id>
                                </program>
                                <program>
                                <mainClass>
                                    dk.statsbiblioteket.digital_pligtaflevering_aviser.tools.main.RegenerateChecksumfileMain
                                </mainClass>
                                <id>dpa-regenerate-checksumfile</id>
                            </program>
                            </programs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- it may be possible to get maven-assembly-plugin to copy these but I could not make it work, so
            just do it in the simplest possible way -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <!-- http://stackoverflow.com/a/11729432/53897 - create classes/META-INF/maven/dependency-tree.txt -->
                    <execution>
                        <id>dependency-tree</id>
                        <phase>package</phase>
                        <goals>
                            <goal>tree</goal>
                        </goals>
                        <configuration>
                            <outputFile>target/appassembler/services/META-INF/dependency-tree.txt</outputFile>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <artifactItems>
                        <artifactItem>
                            <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser</groupId>
                            <artifactId>dpa-dashboard</artifactId>
                            <version>${project.version}</version>
                            <type>war</type>
                            <overWrite>true</overWrite>
                            <destFileName>dpa-dashboard.war</destFileName>
                        </artifactItem>
                        <artifactItem>
                            <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser</groupId>
                            <artifactId>dpa-dashboard</artifactId>
                            <version>${project.version}</version>
                            <!-- our own custom type for this -->
                            <type>tomcat-xml</type>
                            <overWrite>true</overWrite>
                            <destFileName>dpa-dashboard.xml</destFileName>
                        </artifactItem>
                        <artifactItem>
                            <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser</groupId>
                            <artifactId>dpa-manualcontrol</artifactId>
                            <version>${project.version}</version>
                            <type>war</type>
                            <overWrite>true</overWrite>
                            <destFileName>dpa-manualcontrol.war</destFileName>
                        </artifactItem>
                        <artifactItem>
                            <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser</groupId>
                            <artifactId>dpa-manualcontrol</artifactId>
                            <version>${project.version}</version>
                            <!-- our own custom type for this -->
                            <type>tomcat-xml</type>
                            <overWrite>true</overWrite>
                            <destFileName>dpa-manualcontrol.xml</destFileName>
                        </artifactItem>
                        <artifactItem>
                            <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser</groupId>
                            <artifactId>dpa-manualcontrol</artifactId>
                            <version>${project.version}</version>
                            <!-- our own custom type for this -->
                            <type>certificate</type>
                            <overWrite>true</overWrite>
                            <destFileName>cacert</destFileName>
                        </artifactItem>
                    </artifactItems>
                    <outputDirectory>${project.build.directory}/appassembler/services/tomcat-apps</outputDirectory>
                    <overWriteReleases>false</overWriteReleases>
                    <overWriteSnapshots>true</overWriteSnapshots>
                </configuration>
            </plugin>

            <!-- create deployment tarball -->
            <plugin>
                <!-- https://maven.apache.org/plugins/maven-assembly-plugin/usage.html -->
                <artifactId>maven-assembly-plugin</artifactId>
                <!-- 2.6 is latest supporting finalName as is - https://issues.apache.org/jira/browse/MJAR-233 -->
                <version>2.6</version>
                <configuration>
                    <!-- get git info in name - https://stackoverflow.com/a/3269902/53897 -->
                    <!--suppress MavenModelInspection -->
                    <finalName>dpa_${git.branch}_${git.commit.id.abbrev}</finalName>
                    <appendAssemblyId>false</appendAssemblyId>

                    <descriptors>
                        <descriptor>src/main/assembly/assembly.xml</descriptor>
                    </descriptors>
                    <archiveBaseDirectory>${project.build.directory}/appassembler</archiveBaseDirectory>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
